# System-kina-biletowego---aplikacja-konsolowa-

./: CMakeLists.txt  README.md
Project/kino/include/: Client.h  ClientManager.h  ClientType.h  HallManager.h  MovieRepository.h  NormalClient.h  NormalTicket.h  ParameterException.h  PremiumClient.h  Ticket.h  TicketManager.h  TicketRepository.h  TicketType.h
Project/kino/src/: AvaliableException.cpp  ClientType.cpp  HallManager.cpp  Movie.cpp  MovieManager.cpp  NormalClient.cpp  NormalTicket.cpp  PremiumClient.cpp  SeniorTicket.cpp  Showtime.cpp  StudentTicket.cpp  Ticket.cpp  TicketManager.cpp
Project/kino/test/: ExceptionsTest.cpp
kino/: CMakeLists.txt
kino/include/: AvaliableException.h  ClientRepository.h  DuplicateException.h  Hall.h  HallRepository.h  Movie.h  MovieManager.h  Repository.h  SeniorTicket.h  Showtime.h  ShowtimeRepository.h  StudentTicket.h
kino/src/: Client.cpp  ClientManager.cpp  DuplicateException.cpp  Hall.cpp  ParameterException.cpp  ShowtimeRepository.cpp  TicketType.cpp
kino/test/: BasicTest.cpp  ManagerTest.cpp  RepositoryTest.cpp  master.cpp
program/: CMakeLists.txt
